fixed the alignment and made the rows flex to content

--- a/style1.css
+++ b/style1.css
@@ -1,8 +1,11 @@
-
+* {
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: 800;
+}
 
 .container {
     display: grid;
-    grid-template-rows: 50px repeat(4, 250px) 50px;
+    grid-template-rows: 50px repeat(4, fit-content(250px)) 50px;
     grid-template-columns: 1fr 3fr 3fr 1fr;
     grid-template-areas: 
         ". logo links ."
@@ -15,6 +18,11 @@
 
 .header {
     background-color: #1F2937;
+    color: white;
+}
+.row1 {
+    background-color: #1F2937;
+    color: white;
 }
 
 .logo {
@@ -36,6 +44,6 @@
 .hero2 {
     grid-area: hero2;
     display: flex;
-    flex-direction: column;
-    justify-content: right;
+    align-items: center;
+    justify-content: center;
 }
